style: :lipstick: Fix list's dot alignment
Add the correct padding-left for lists in the page

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -3569,7 +3569,7 @@
     }
 
     &__list {
-        padding-left: 0.75rem;
+        padding-left: .9375rem;
 
         &-item {
             margin-bottom: .75rem;
